erDiagram
    TENANTS ||--o{ USERS : has
    TENANTS ||--o{ PARTIES : has
    TENANTS ||--o{ PRODUCTS : has
    TENANTS ||--o{ WAREHOUSES : has
    TENANTS ||--o{ COMMERCIAL_DOCUMENTS : has
    TENANTS ||--o{ CHART_ACCOUNTS : has
    TENANTS ||--o{ JOURNAL_ENTRIES : has

    PARTIES ||--o{ PARTY_ROLES : has
    PARTIES ||--o{ PARTY_CONTACTS : has
    PARTIES ||--o{ PARTY_ADDRESSES : has
    ADDRESSES ||--o{ PARTY_ADDRESSES : used_by

    CATEGORIES ||--o{ PRODUCTS : contains
    PRODUCTS ||--o{ PRODUCT_VARIANTS : has
    PRODUCT_VARIANTS ||--o{ PRODUCT_VARIANT_ATTRIBUTE_VALUES : described_by

    WAREHOUSES ||--o{ WAREHOUSE_LOCATIONS : contains
    PRODUCT_VARIANTS ||--o{ INVENTORY_BALANCES : balances
    WAREHOUSE_LOCATIONS ||--o{ INVENTORY_BALANCES : holds
    PRODUCT_VARIANTS ||--o{ INVENTORY_LAYERS : layers
    STOCK_MOVEMENTS ||--o{ STOCK_MOVEMENT_LINES : contains

    COMMERCIAL_DOCUMENTS ||--o{ COMMERCIAL_DOCUMENT_LINES : contains
    COMMERCIAL_DOCUMENTS ||--o{ DOCUMENT_LINKS : links
    COMMERCIAL_DOCUMENT_LINES ||--o{ DOCUMENT_LINE_ALLOCATIONS : allocates
    STOCK_MOVEMENT_LINES ||--o{ DOCUMENT_LINE_ALLOCATIONS : consumed_by

    FISCAL_YEARS ||--o{ FISCAL_PERIODS : contains
    FISCAL_PERIODS ||--o{ JOURNAL_ENTRIES : posts
    CHART_ACCOUNTS ||--o{ JOURNAL_LINES : posts
    JOURNAL_ENTRIES ||--o{ JOURNAL_LINES : contains
    SUBLEDGER_DOCUMENTS ||--o{ SUBLEDGER_ALLOCATIONS : settled_by
    PAYMENTS ||--o{ PAYMENT_ALLOCATIONS : allocates

    IDENTIFIERS ||--o{ IDENTIFIER_SCANS : scanned
    IDENTIFIERS ||--o{ TRACEABILITY_EVENTS : traced
